Updates to ammed API docs and gather more info from Moving images data set
